<resources>
    <string name="app_name">粉涩直播</string>

    <string name="http_loading">加载中...</string>
    <string name="net_err">连接服务器失败，请检查网络...</string>
    <string name="net_dialog_err">网络请求失败，请检查您的网络设置</string>

    <!--mian-->
    <string name="bottom_navigation_item_home">主页</string>
    <string name="bottom_navigation_item_bi">BI数据</string>
    <string name="bottom_navigation_item_bbs">U互动社区</string>
    <string name="bottom_navigation_item_gd">聚焦广电</string>
    <string name="bottom_navigation_item_user">我的</string>

    <!--home-->
    <string name="home_common_kpi">常用指标</string>
    <string name="home_all_kpi">全部指标</string>
    <string name="home_banner_err">加载失败</string>
    <string name="home_load_err">加载失败</string>
    <string name="home_data_err">无加载数据</string>
    <string name="home_kpi_empty">你还没有常用指标，请设置</string>

    <!-- bidata-->
    <string name="bidata_title">BI数据</string>

    <!-- ucommunity-->
    <string name="ucommunity_title">U互动社区</string>

    <!-- focus_gd -->
    <string name="focus_gd_title">聚焦广电</string>

    <!-- my -->
    <string name="my_title">我的</string>
    <string name="my_phone">手机号</string>
    <string name="my_catch">清理缓存</string>
    <string name="my_version">检查更新</string>
    <string name="my_logout">退出登录</string>
    <string name="my_cacheclear">缓存清理</string>
    <string name="my_checkcatche">确定清空离线缓存</string>
    <string name="my_cancle">取消</string>
    <string name="my_sure">确定</string>
    <string name="my_checklogout">确定退出登录</string>

    <!--login-->
    <string name="login_bg_text">注册登陆后体验更精彩</string>
    <string name="login_hint_phone_text">请输入手机号</string>
    <string name="login_hint_vercode_text">请输入密码</string>
    <string name="login_get_vercoed_text">获取验证码</string>
    <string name="login_center_text">立即登陆</string>
    <string name="login_err">验证码或密码错误</string>
    <string name="getVer_err">获取验证码失败</string>
    <string name="phone_empety">手机号不能为空</string>
    <string name="phone_err">请输入正确的手机号</string>
    <string name="getVer_success">验证码已发送</string>
    <string name="login_regist">注册</string>
    <string name="forget_pwd">忘记密码</string>
    <string name="login_reps">登陆即代表</string>
    <string name="login_clause">《服务和隐私条款》</string>

    <!--startLive-->
    <string name="live_title">直播标题</string>
    <string name="live_hint_title">给直播写个标题吧</string>
    <string name="live_share">分享至</string>
    <string name="live_beauty">美颜</string>
    <string name="start_live_text">开始直播</string>

    <!--Live-->
    <string name="live_room">我的直播间</string>
    <string name="live_brodcast">公告栏</string>
    <string name="live_star">星钻</string>
    <string name="live_protect">房管</string>
    <string name="live_wait">虚位以待</string>
    <string name="live_say_sth">说点什么...</string>
    
    <!--LinkPer-->
    <string name="link_per">联系人</string>
    <string name="link_fens">粉丝</string>
    <string name="link_manager">房管</string>
    <string name="link_up_to_manager">升级房管</string>
    <string name="link_decend_to_fens">降级粉丝</string>

    <!-- manageKpi-->
    <string name="managekpi_title">全部指标</string>
    <string name="managekpi_title_edit">指标编辑</string>
    <string name="managekpi_common_kpi">常用指标</string>
    <string name="managekpi_other_kpi">其他指标</string>
    <string name="managekpi_cancel">取消</string>
    <string name="managekpi_finish">完成</string>
    <string name="managekpi_edit">编辑</string>
    <string name="managekpi_comonkpi_empty">请添加常用指标</string>
    <string name="managekpi_otherkpi_empty">没有更多指标</string>

    <!-- 权限提示信息 -->
    <string name="permission_write_external_storage">程序需要缓存一些数据在SD卡，否则无法运行。</string>
    <string name="permission_camera">程序需要使用摄像头权限用来音视频通话，否则无法运行。</string>
    <string name="permission_record_audio">程序需要录音权限用来音视频通话，否则无法运行。</string>
    <string name="permission_read_phone_state">程序需要电话监听权限用来音视频通话，否则无法运行。</string>
    <!-- 进房间错误码 -->
    <string name="ttt_error_enterchannel_format">房间名不符合数字格式</string>
    <string name="ttt_error_enterchannel_timeout">超时，10秒未收到服务器返回结果</string>
    <string name="ttt_error_enterchannel_token_invaild">token 值无效</string>
    <string name="ttt_error_enterchannel_version">版本错误</string>
    <string name="ttt_error_enterchannel_unconnect">无法连接服务器</string>
    <string name="ttt_error_enterchannel_room_no_exist">该房间不存在</string>
    <string name="ttt_error_enterchannel_verification_failed">服务器验证错误</string>
    <string name="ttt_error_enterchannel_unknow">进房间发生未知错误</string>

    <!-- 异常退房间错误码 -->
    <string name="ttt_error_exit_dialog_title">退出房间提示</string>
    <string name="ttt_error_exit_dialog_prefix_msg">退出原因</string>
    <string name="ttt_error_exit_kicked">被主播踢出</string>
    <string name="ttt_error_exit_push_rtmp_failed">rtmp推流失败</string>
    <string name="ttt_error_exit_server_overload">服务器过载</string>
    <string name="ttt_error_exit_anchor_exited">主播已退出</string>
    <string name="ttt_error_exit_relogin">重复登录</string>
    <string name="ttt_error_exit_noaudio_upload">长时间没有上行音频数据</string>
    <string name="ttt_error_exit_novideo_upload">长时间没有上行视频数据</string>
    <string name="ttt_error_exit_other_anchor_enter">其他人以主播身份进入</string>
    <string name="ttt_error_exit_token_expired">token 值已过期</string>


    <!--弹框提示信息-->
    <string name="dialog_live_open">开启直播</string>
    <string name="dialog_check_live_open">是否开启直播</string>
    <string name="dialog_exit_live">退出直播</string>
    <string name="dialog_check_live">是否退出直播</string>
    <string name="dialog_open_beauty">开启美颜</string>
    <string name="dialog_check_beauty">是否开启美颜</string>
    <string name="dialog_close_beauty">关闭美颜</string>
    <string name="dialog_check_close_beauty">是否关闭美颜</string>
    <string name="dialog_open_camera">开启相机</string>
    <string name="dialog_check_camera">是否开启相机</string>
    <string name="dialog_open_locate">开启定位</string>
    <string name="dialog_check_locate">是否开启定位</string>

    <!--个人信息弹框-infoDialog-->
    <string name="dialog_focus">关注</string>
    <string name="dialog_send_star">送出的星钻</string>
    <string name="dialog_fans">粉丝</string>
    <string name="dialog_get_star">收入的星钻</string>

    <!--分享弹框-shareDialog-->
    <string name="dialog_fens">我的粉丝</string>
    <string name="dialog_manage">我的房管</string>
    <string name="dialog_share">分享链接</string>
    <string name="dialog_out">退出登录</string>

    <!--忘记密码-->
    <string name="pwd_title">忘记密码</string>
    <string name="pwd_hint">请填写密码</string>
    <string name="pwd_confirm_hint">请确认密码</string>
    <string name="pwd_find_back">立即找回</string>
    
    <!--修改公告-->
    <string name="notice_title">点击下方修改公告</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>


</resources>
