<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.ManageKpiActivity">

    <android.support.v7.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:cardCornerRadius="0dp">

        <LinearLayout
            android:id="@+id/ll_status_bar"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:id="@+id/view_status_bar"
                android:layout_width="match_parent"
                android:layout_height="0dp" />

            <RelativeLayout
                android:layout_width="match_parent"
                android:layout_height="@dimen/tool_bar_height">

                <ImageView
                    android:id="@+id/iv_back"
                    android:layout_width="38dp"
                    android:layout_height="44dp"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="4dp"
                    android:padding="15dp"
                    android:src="@mipmap/icon_back"
                    android:visibility="visible" />

                <TextView
                    android:id="@+id/tv_cancel"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="13dp"
                    android:padding="10dp"
                    android:text="@string/managekpi_cancel"
                    android:textColor="@color/font_bule_color"
                    android:textSize="@dimen/font14"
                    android:visibility="gone" />

                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_centerInParent="true"
                    android:gravity="center"
                    android:text="@string/managekpi_title"
                    android:textColor="@color/font_black_color"
                    android:textSize="@dimen/title_size" />

                <TextView
                    android:id="@+id/tv_finish"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="13dp"
                    android:layout_marginRight="14dp"
                    android:padding="10dp"
                    android:text="@string/managekpi_finish"
                    android:textColor="@color/font_bule_color"
                    android:textSize="@dimen/font14"
                    android:visibility="gone" />

                <TextView
                    android:id="@+id/tv_edit"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_alignParentRight="true"
                    android:layout_centerVertical="true"
                    android:layout_marginLeft="13dp"
                    android:layout_marginRight="14dp"
                    android:padding="10dp"
                    android:text="@string/managekpi_edit"
                    android:textColor="@color/font_black_color"
                    android:textSize="@dimen/font14" />

            </RelativeLayout>

        </LinearLayout>

    </android.support.v7.widget.CardView>

    <android.support.v4.widget.NestedScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="18dp"
                android:text="@string/managekpi_common_kpi"
                android:textColor="@color/font_black_color"
                android:textSize="@dimen/font16" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rcy_common_kpi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"
                android:clipChildren="false"></android.support.v7.widget.RecyclerView>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:layout_marginTop="5dp"
                android:text="@string/managekpi_other_kpi"
                android:textColor="@color/font_black_color"
                android:textSize="@dimen/font16" />

            <android.support.v7.widget.RecyclerView
                android:id="@+id/rcy_other_kpi"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginBottom="20dp"
                android:layout_marginLeft="5dp"
                android:layout_marginRight="5dp"></android.support.v7.widget.RecyclerView>
        </LinearLayout>

    </android.support.v4.widget.NestedScrollView>


</LinearLayout>