<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/white"
    android:orientation="vertical"
    android:id="@+id/ly_start_live"
    tools:context=".activity.StartLiveActivity">

    <View
        android:id="@+id/view_status_bar"
        android:layout_width="match_parent"
        android:layout_height="0dp" />

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="76.5dp"
        android:padding="10dp">

        <ImageView
            android:id="@+id/iv_locate"
            android:layout_width="17dp"
            android:layout_height="21.5dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_gravity="left"
            android:layout_marginStart="10dp"
            android:layout_marginLeft="10dp"
            android:src="@mipmap/locate_icon" />

        <ImageView
            android:id="@+id/iv_photo"
            android:layout_width="21dp"
            android:layout_height="21dp"
            android:layout_alignParentStart="true"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginStart="42dp"
            android:layout_marginLeft="42dp"
            android:src="@mipmap/photo_icon" />

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="wrap_content"
            android:layout_height="21dp"
            android:layout_alignParentEnd="true"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginEnd="10dp"
            android:layout_marginRight="10dp"
            android:src="@mipmap/finish_icon" />

    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25.5dp"
        android:layout_marginBottom="36.5dp"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_add"
            android:layout_width="105dp"
            android:layout_height="105dp"
            android:layout_marginRight="12dp"
            android:src="@mipmap/add_icon" />

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:gravity="center_vertical"
            android:orientation="vertical">

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:text="@string/live_title"
                android:textColor="@color/font_second_color"
                android:textSize="@dimen/font12" />

            <EditText
                android:id="@+id/et_title"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:background="@color/white"
                android:hint="@string/live_hint_title"
                android:textSize="@dimen/font18"
                android:textStyle="bold" />

        </LinearLayout>

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ly_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="25.5dp"
        android:layout_marginBottom="121dp"
        android:gravity="center_vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginRight="14dp"
            android:text="@string/live_share"
            android:textColor="@color/font_second_color"
            android:textSize="@dimen/font12"
            android:textStyle="bold" />

        <ImageView
            android:layout_width="25dp"
            android:layout_height="25dp"
            android:src="@mipmap/wechat_icon" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ly_beauty"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginBottom="28dp"
        android:gravity="center"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_marginRight="8dp"
            android:src="@mipmap/beauty_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/live_beauty"
            android:textColor="@color/main_color"
            android:textSize="@dimen/font14" />
    </LinearLayout>

    <TextView
        android:id="@+id/tv_start_live"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginLeft="51dp"
        android:layout_marginRight="51dp"
        android:background="@mipmap/live_btn_bg"
        android:gravity="center"
        android:text="@string/start_live_text"
        android:textColor="@color/white"
        android:textSize="@dimen/font18" />

</LinearLayout>