<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".activity.RegistActivity">


    <LinearLayout
        android:id="@+id/ly_title_bar"
        android:layout_width="match_parent"
        android:layout_height="40dp"
        android:background="@color/white"
        android:orientation="horizontal">

        <ImageView
            android:id="@+id/iv_close"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="-15dp"
            android:src="@mipmap/finish_icon" />

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_weight="1"
            android:gravity="center"
            android:text="@string/pwd_title"
            android:textColor="@color/black"
            android:textSize="17sp" />

        <ImageView
            android:id="@+id/iv_more"
            android:layout_width="20dp"
            android:layout_height="20dp"
            android:layout_gravity="center"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="15dp"
            android:src="@mipmap/more_icon"
            android:visibility="invisible" />

    </LinearLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="12dp"
            android:src="@mipmap/pwd_phone" />

        <EditText
            android:id="@+id/et_phone"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/font13"
            android:layout_weight="1"
            android:background="@color/white"
            android:hint="@string/login_hint_phone_text"
            android:textColor="@color/font_black_color"
            android:textSize="@dimen/font14" />

    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="49dp"
        android:background="@color/divider_main_color" />

    <LinearLayout
        android:id="@+id/ly_catche"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="12dp"
            android:src="@mipmap/pwd_defend" />


        <EditText
            android:id="@+id/et_var"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:background="@color/white"
            android:hint="@string/login_get_vercoed_text"
            android:textColor="@color/font_black_color"
            android:textSize="@dimen/font14" />

        <TextView
            android:id="@+id/tv_var"
            android:layout_width="84dp"
            android:layout_height="23dp"
            android:layout_marginLeft="8dp"
            android:layout_marginRight="13dp"
            android:background="@drawable/shape_edit"
            android:gravity="center"
            android:text="@string/login_get_vercoed_text"
            android:textColor="@color/white" />


    </LinearLayout>

    <View
        android:layout_width="match_parent"
        android:layout_height="1dp"
        android:layout_marginLeft="49dp"
        android:background="@color/divider_main_color" />

    <LinearLayout
        android:id="@+id/ly_pwd"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:background="@color/white"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="12dp"
            android:src="@mipmap/pwd_lock" />

        <EditText
            android:id="@+id/et_pwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/font13"
            android:layout_weight="1"
            android:background="@color/white"
            android:hint="@string/pwd_hint"
            android:textColor="@color/font_black_color"
            android:textSize="@dimen/font14" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ly_confirm_pwd"
        android:layout_width="match_parent"
        android:layout_height="50dp"
        android:layout_marginBottom="100dp"
        android:background="@color/white"
        android:focusable="true"
        android:focusableInTouchMode="true"
        android:gravity="center_vertical"
        android:orientation="horizontal">

        <ImageView
            android:layout_width="22dp"
            android:layout_height="22dp"
            android:layout_marginLeft="15dp"
            android:layout_marginRight="12dp"
            android:src="@mipmap/pwd_lock" />

        <EditText
            android:id="@+id/et_conf_pwd"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_marginRight="@dimen/font13"
            android:layout_weight="1"
            android:background="@color/white"
            android:hint="@string/pwd_confirm_hint"
            android:textColor="@color/font_black_color"
            android:textSize="@dimen/font14" />

    </LinearLayout>


    <TextView
        android:id="@+id/tv_find_back"
        android:layout_width="match_parent"
        android:layout_height="45dp"
        android:layout_marginLeft="18dp"
        android:layout_marginRight="18dp"
        android:background="@drawable/login_selector"
        android:gravity="center"
        android:text="@string/pwd_find_back"
        android:textColor="@color/white" />

</LinearLayout>